# pidgin

./: .gitignore  Doxyfile  MacOS_SetUp  Makefile  Makefile.in  README  WindowResizeDoc.docx  aclocal.m4  config.h  config.status  configure  libtool  meson.build  pidgin.apspec
subprojects/gplugin/: .hgtags  ChangeLog  convey.yml  meson.build  meson_options.txt
subprojects/gplugin/.hg/: dirstate
subprojects/gplugin/.hg/cache/: branch2-immutable  branch2-served  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-visible
subprojects/gplugin/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
subprojects/gplugin/.hg/store/data/: _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  _c_o_p_y_r_i_g_h_t.i  _change_log.i  _debian.md.i  _h_a_c_k_i_n_g._o_s_x.i  _h_a_c_k_i_n_g.i  _h_a_c_k_i_n_g.md.i  _h_i_s_t_o_r_y.md.i  _i_n_s_t_a_l_l.i  _i_n_s_t_a_l_l.md.i  _r_e_a_d_m_e.i  _r_e_a_d_m_e.md.i  convey.yml.i  gidbits.pc.in.i  gplugin-uninstalled.pc.in.i  gplugin-version.sh.in.i  gplugin.pc.in.i  meson.build.i  meson__options.txt.i  valgrind.sh.i  ~2eclang-format.i  ~2ehgflow.i  ~2ehgignore.i  ~2ehgtags.i  ~2emailmap.i  ~2ereviewboardrc.i
subprojects/gplugin/gplugin/: gplugin-core.c  gplugin-loader-tests.c  gplugin-loader.c  gplugin-manager.c  gplugin-manager.h  gplugin-native-loader.c  gplugin-native-plugin.c  gplugin-options.c  gplugin-plugin-info.c  gplugin-plugin-info.h  gplugin-plugin.c  meson.build
subprojects/gplugin/gplugin-gtk3/: gplugin-gtk-plugin-info.c  gplugin-gtk-plugin-info.h  gplugin-gtk-store.c  gplugin-gtk-store.h  gplugin-gtk-view.c  gplugin-gtk-view.h  meson.build
subprojects/gplugin/gplugin-gtk3-viewer/: gplugin-gtk-viewer.c  meson.build
subprojects/gplugin/gplugin-gtk3/reference/: gplugin-gtk3.toml.in  meson.build
subprojects/gplugin/gplugin-gtk4/: meson.build
subprojects/gplugin/gplugin-gtk4-viewer/: gplugin-gtk-viewer-window.c  gplugin-gtk-viewer-window.h  gplugin-gtk-viewer.c  meson.build
subprojects/gplugin/gplugin-gtk4-viewer/data/: window.ui
subprojects/gplugin/gplugin-gtk4/data/: gplugin-gtk.gresource.xml
subprojects/gplugin/gplugin-gtk4/reference/: meson.build
subprojects/gplugin/gplugin-query/: gplugin-query.c
subprojects/gplugin/gplugin/reference/: genie.md  vala.md
subprojects/gplugin/gplugin/tests/: meson.build  test-bind-global.c  test-find-plugins.c  test-id-normalize.c  test-loader-registration.c  test-loader.c  test-option-group.c  test-versioned-dependencies.c
subprojects/gplugin/gplugin/tests/bad-plugins/: query-error.c
subprojects/gplugin/gplugin/tests/load-on-query-fail/: load-on-query-fail.c
subprojects/gplugin/gplugin/tests/load-on-query-pass/: load-on-query-pass.c
subprojects/gplugin/gplugin/tests/plugins/: basic-plugin.c  meson.build
subprojects/gplugin/lua/: gplugin-lua-core.c  gplugin-lua-plugin.c  meson.build
subprojects/gplugin/lua/tests/: meson.build
subprojects/gplugin/lua/tests/plugins/: basic.lua
subprojects/gplugin/packaging/: gplugin.spec.in
subprojects/gplugin/packaging/debian/: changelog  control  gir1.2-gplugin-gtk3-1.0.install  gir1.2-gplugin-gtk4-1.0.install  libgplugin-dev.install  libgplugin-gtk3-0.install  libgplugin-gtk3-bin.install  libgplugin-gtk3-dev.install  libgplugin-gtk4-0.install  libgplugin-gtk4-dev.install
subprojects/gplugin/perl5/: gplugin-perl5-core.c  gplugin-perl5-loader.c  gplugin-perl5-plugin.c  meson.build
subprojects/gplugin/perl5/tests/: meson.build
subprojects/gplugin/perl5/tests/plugins/: basic.pl  dependent.pl  load-exception.pl  (+3 more)
subprojects/gplugin/po/: POTFILES
subprojects/gplugin/python3/: gplugin-python3-core.c  gplugin-python3-loader.c  gplugin-python3-plugin.c  gplugin-python3-test-pygobject.c  meson.build
subprojects/gplugin/python3/tests/: meson.build  test-python3-utils.c
subprojects/gplugin/tcc/: gplugin-tcc-core.c  gplugin-tcc-plugin.c  meson.build
subprojects/gplugin/vala/: meson.build
subprojects/talkatu/: .hgignore  AUTHORS  ChangeLog  HACKING  INSTALL  README.md  RELEASE.md  convey.yml  meson.build
subprojects/talkatu/.hg/: dirstate
subprojects/talkatu/.hg/cache/: branch2-base  rbc-revs-v1  tags2-visible
subprojects/talkatu/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
subprojects/talkatu/demo/: meson.build  talkatudemo.c  talkatudemowindow.c  talkatudemowindow.h
subprojects/talkatu/demo/data/: demo.ui  talkatudemo.gresource.xml
subprojects/talkatu/packaging/: meson.build  talkatu.spec.in
subprojects/talkatu/packaging/debian/: changelog  control  copyright  libtalkatu-dev.install  libtalkatu0.install  rules  talkatu-demo.install
subprojects/talkatu/packaging/mingw-cross/: PKGBUILD
subprojects/talkatu/po/: LINGUAS  POTFILES  cs.po  gl.po  meson.build
subprojects/talkatu/talkatu/: meson.build  talkatu.xml.in  talkatuactiongroup.c  talkatuactiongroup.h  talkatuattachment.c  talkatuattachmentdialog.c  talkatuattachmentpreview.c  talkatuattachmentpreview.h  talkatubuffer.c  talkatubuffer.h  talkatucodeset.c  talkatucore.c  talkatueditor.c  talkatuhistory.c  talkatuhistory.h  talkatuhistoryrow.c  talkatuhtmlbuffer.c  talkatuhtmlbuffer.h  talkatuhtmlpangorenderer.c  talkatuhtmlrenderer.c  talkatuinput.c  talkatuinput.h  talkatulinkdialog.c  talkatumarkdownbuffer.c  talkatumarkdownbuffer.h  talkatumarkup.c  talkatumenutoolbutton.c  talkatumenutoolbutton.h  talkatumessage.c  talkatumessageactions.c  talkatumessageactions.h  talkatuscrolledwindow.c  talkatuscrolledwindow.h  talkatusimpleattachment.c  talkatutag.c  talkatutagtable.c  talkatutagtable.h  talkatutoolbar.c  talkatutoolbar.h  talkatutooldrawer.c  (+8 more)
subprojects/talkatu/talkatu/data/: attachmentdialog.ui  attachmentpreview.ui  editor.ui  historyrow.ui  linkdialog.ui  messageactions.ui  talkatu.gresource.xml  toolbar.ui
subprojects/talkatu/talkatu/reference/: meson.build  talkatu-docs.xml  version.xml.in
subprojects/talkatu/talkatu/tests/: meson.build  talkatutestactiongroup.c  talkatutesthtmlpangorenderer.c  talkatutesthtmlrenderer.c  talkatutesthtmlserialization.c  test-wrapper.py
subprojects/talkatu/vapi/: meson.build
(+2054 files in other folders)
